accessiblity + overflow fix

--- a/goty-client/src/components/controls/ColorModeSwitch/ColorModeSwitch.module.scss
+++ b/goty-client/src/components/controls/ColorModeSwitch/ColorModeSwitch.module.scss
@@ -8,6 +8,7 @@
   color: var(--text);
   border: 2px solid var(--text);
   cursor: pointer;
+  overflow: hidden
 }
 
 .switch input {
