--- a/goty-client/src/index.scss
+++ b/goty-client/src/index.scss
@@ -2,8 +2,13 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   background: var(--backgroundGradient);
+  @media only screen and (max-width: 767px) {
+    font-size: 1.0em;
+  }
 
-  font-size: 1.3em;
+  @media only screen and (min-width: 768px) {
+    font-size: 1.3em;
+  }
 }
 
 :root {
